[metadata]
name = django-wm
version = attr: mentions.__version__
author = Michael Beaton
author_email = michael@beatonma.org
description = Webmention support for Django.
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://beatonma.org/webmentions_tester/
project_urls =
    Source = https://github.com/beatonma/django-wm
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    beautifulsoup4 ~= 4.6.3
    Django >= 2.2
    mf2py ~= 1.1.2
    requests ~= 2.20.0
tests_require =
    django-nose
    pinocchio

[options.extras_require]
celery = celery >= 5.2.2
